adding a bunch of tests that all pass, recall is still terrible -- and worse with M=8 than M=4